--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "garafa",
-  "version": "0.0.0",
+  "name": "turtle-race",
+  "version": "0.2.0",
   "description": "",
   "main": "index.coffee",
   "dependencies": {
     "blessed": "~0.1.81",
     "chalk": "~1.1.1",
-    "zibar": "^1.0.3"
+    "zibar": "^1.0.6"
   },
   "devDependencies": {},
   "scripts": {
